# CoreML

./: .gitignore  pyproject.toml  requirements.txt
coreml/regression/: linear_regression.py  linearregression.py  multiple_linear_regression.py  simple_linear_regression.py  simplelinearregression.py
coreml/utils/: exceptions.py  npstatistics.py
tests/test_regression/: test_simple_linear_regression.py
